--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
         <section id="presentacion" class="px-4 pt-5 my-5 text-center border-bottom">
             <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive
-                    grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <p class="lead mb-4">¡Bienvenidos!
+                    Soy Laura Arrona, estudiante de Ingeniería Biomédica en la Universidad de Guanajuato. Apasionada por
+                    las ciencias biológicas y la programación, fusiono ambos campos para innovar en salud. Mi formación
+                    abarca anatomía, fisiología, bioquímica y programación en Python, LaTeX, HTML y JavaScript. Me
+                    enfoco en tecnologías para medicina personalizada y calidad de vida. Aquí, comparto mis proyectos y
+                    experiencias. ¡Gracias por visitar!</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                     <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
@@ -61,7 +64,7 @@
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
                 <div class="container px-5">
-                    <img src="bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
+                    <img src="assets/foto fondo.jpeg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
                         width="700" height="500" loading="lazy">
                 </div>
             </div>
