--- a/index.html
+++ b/index.html
@@ -14,63 +14,64 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Lau Arrona</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Yo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Habilidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Testimonios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Contactos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- cabecera de mi pagina -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Lau Arrona</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Yo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Habilidades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Testimonios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Contactos</a>
-                        </li>
-                    </ul>
+<div>
+                <h1 class="display-4 fw-bold ">¡Bienvenidos!
+                    Soy Laura Arrona</h1>
+                <div class="col-lg-6 mx-auto">
+                    <p class="lead mb-4"> Estudiante de Ingeniería Biomédica en la Universidad de Guanajuato. Apasionada
+                        por
+                        las ciencias biológicas y la programación, fusiono ambos campos para innovar en salud. Mi
+                        formación
+                        abarca anatomía, fisiología, bioquímica y programación en Python, LaTeX, HTML y JavaScript.
+                        Aquí, comparto mis proyectos y
+                        experiencias. ¡Gracias por visitar!</p>
+                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                        <button type="button" class="btn btn-outline-danger btn-lg px-4 gap-3">Contáctame</button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+                    </div>
                 </div>
             </div>
-        </nav>
+
     </header>
 
     <main>
 
         <section id="presentacion" class="px-4 pt-5 my-5 text-center border-bottom">
-            <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">¡Bienvenidos!
-                    Soy Laura Arrona, estudiante de Ingeniería Biomédica en la Universidad de Guanajuato. Apasionada por
-                    las ciencias biológicas y la programación, fusiono ambos campos para innovar en salud. Mi formación
-                    abarca anatomía, fisiología, bioquímica y programación en Python, LaTeX, HTML y JavaScript. Me
-                    enfoco en tecnologías para medicina personalizada y calidad de vida. Aquí, comparto mis proyectos y
-                    experiencias. ¡Gracias por visitar!</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-                </div>
-            </div>
-            <div class="overflow-hidden" style="max-height: 30vh;">
-                <div class="container px-5">
-                    <img src="assets/foto fondo.jpeg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
-                        width="700" height="500" loading="lazy">
-                </div>
-            </div>
+            
         </section>
+
         <section id="habilidades" class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom">Columns with icons</h2>
+            <h2 class="pb-2 border-bottom">Habilidades</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="feature col">
                     <div
