--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -71,59 +71,42 @@
 
         <section id="habilidades" class="container px-4 py-5">
             <h2 class="pb-2 border-bottom">Habilidades</h2>
+            <!-- titulo de mi seccion -->
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <!-- contenedor de mis cartas -->
                 <div class="feature col">
                     <div
-                        class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection"></use>
+                        class=" d-inline-flex align-items-center justify-content-center text-primary bg-gradient  fs-2 py-2 px-3 rounded">
+                        <i class="bi bi-code-square"></i>
                         </svg>
                     </div>
-                    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                        sentence and probably just keep going until we run out of words.</p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
+                    <h3 class="fs-2 text-body-emphasis my-2">Desarrollo web</h3>
+                    <!-- titulo de los cuadros -->
+                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
                     </a>
                 </div>
                 <div class="feature col">
                     <div
-                        class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#people-circle"></use>
+                        class=" d-inline-flex align-items-center justify-content-center text-primary bg-gradient  fs-2 py-2 px-3 rounded">
+                        <i class="bi bi-buildings"></i>
                         </svg>
                     </div>
-                    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                        sentence and probably just keep going until we run out of words.</p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
+                    <h3 class="fs-2 text-body-emphasis my-2">Trabajo en equipo</h3>
+                    <!-- titulo de los cuadros -->
+                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
                     </a>
                 </div>
                 <div class="feature col">
                     <div
-                        class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#toggles2"></use>
+                        class=" d-inline-flex align-items-center justify-content-center text-primary bg-gradient  fs-2 py-2 px-3 rounded">
+                        <i class="bi bi-clipboard"></i>
                         </svg>
                     </div>
-                    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                        sentence and probably just keep going until we run out of words.</p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
+                    <h3 class="fs-2 text-body-emphasis my-2">Organizacion</h3>
+                    <!-- titulo de los cuadros -->
+                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
                     </a>
                 </div>
-            </div>
         </section>
         <section id="proyecto" class="container px-4 py-5">
             <h2 class="pb-2 border-bottom">Custom cards</h2>
