--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lau Arrona</title>
+    <title>Portafolio - Lau Arrona</title>
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar fixed-top navbar-expand-lg bg-black">
         <div class="container-fluid">
             <!-- el conteiner-fluid pone en las esquinas el contenido -->
             <a class="navbar-brand text-light" href="#">Lau Arrona</a>
@@ -32,7 +32,7 @@
                         <a class="nav-link text-light" href="#habilidades">Habilidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#proyecto">Proyectos</a>
+                        <a class="nav-link text-light" href="#proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled text-light" href="#testimonios" aria-disabled="true">Testimonios</a>
@@ -57,8 +57,8 @@
                         abarca anatomía, fisiología, bioquímica y programación en Python, LaTeX, HTML y JavaScript.
                         Aquí, comparto mis proyectos y experiencias. ¡Gracias por visitar!</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                        <button type="button" class="btn btn-outline-danger btn-lg px-4 g">Contáctame</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Correo</button>
+                        <button type="button" class="btn btn-danger">Contactame</button>
+                        <button type="button" class="btn btn-outline-info">Correo</button>
                     </div>
                 </div>
             </div>
@@ -82,18 +82,26 @@
                     </div>
                     <h3 class="fs-2 text-body-emphasis my-2">Desarrollo web</h3>
                     <!-- titulo de los cuadros -->
-                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
+                    <p>Soy hábil en el desarrollo web, dominando HTML, CSS y JavaScript. Estas tecnologías me permiten
+                        construir sitios web modernos y responsivos, con un diseño intuitivo y funcional. Mi capacidad
+                        para resolver problemas y optimizar el código garantiza una experiencia de usuario excepcional y
+                        un rendimiento eficiente.</p>
                     </a>
                 </div>
+
                 <div class="feature col">
                     <div
                         class=" d-inline-flex align-items-center justify-content-center text-primary bg-gradient  fs-2 py-2 px-3 rounded">
-                        <i class="bi bi-buildings"></i>
+                        <i class="bi bi-bag-heart"></i>
                         </svg>
                     </div>
-                    <h3 class="fs-2 text-body-emphasis my-2">Trabajo en equipo</h3>
+                    <h3 class="fs-2 text-body-emphasis my-2">Creatividad</h3>
                     <!-- titulo de los cuadros -->
-                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
+                    <p>Soy muy ágil para crear videos, utilizando mi creatividad y habilidades tecnológicas. Mi
+                        experiencia en desarrollo web me permite incorporar elementos innovadores y funcionales,
+                        logrando proyectos visualmente atractivos y efectivos. La combinación de estas competencias me
+                        permite destacar en la creación de contenido multimedia de alta calidad.
+                    </p>
                     </a>
                 </div>
                 <div class="feature col">
@@ -104,148 +112,96 @@
                     </div>
                     <h3 class="fs-2 text-body-emphasis my-2">Organizacion</h3>
                     <!-- titulo de los cuadros -->
-                    <p>Desarrollo de paginas web basandome en el leguaje Html, JS y CSS</p>
+                    <p>Soy disciplinada y tengo una buena estructura para desarrollar proyectos. La planificación
+                        meticulosa y la gestión eficiente del tiempo me permiten cumplir con los plazos y objetivos
+                        establecidos. Mantengo un enfoque ordenado y sistemático, asegurando que cada detalle del
+                        proyecto sea atendido con precisión y cuidado.</p>
                     </a>
                 </div>
         </section>
-        <section id="proyecto" class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom">Custom cards</h2>
 
-            <section id="testimonios" class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <section id="proyectos" class="container px-4 py-5">
+            <h2 class="pb-2 border-bottom">Proyectos</h2>
+
+            <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+
+
                 <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-1.jpg');">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+
+                    <div id="proyecto-uno" class="proyecto card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
+
+                        <div class="d-flex flex-column h-100 p-5 pb-3 bs-danger-text-emphasis text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Clon de google</h3>
+
                             <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
                                 <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>Earth</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>3d</small>
+                                    <i class="bi bi-code-square"></i>
+                                    <a href="http://" target="_blank" class="ps-3">URL</a>
                                 </li>
                             </ul>
+
                         </div>
+
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-2.jpg');">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple
-                                lines</h3>
-                            <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>Pakistan</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>4d</small>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-3.jpg');">
+
+                    <div id="proyecto-dos" class="proyecto card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
+
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Mi primera pagina
+                            </h3>
+
                             <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
                                 <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>California</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>5d</small>
+                                    <i class="bi bi-code-square"></i>
+                                    <a href="http://" target="_blank" class="ps-3">URL</a>
                                 </li>
                             </ul>
+
                         </div>
+
                     </div>
                 </div>
-            </section>
+
+            </div>
         </section>
+
         <section id="testimonios">
-            <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
-                        aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
-                        class=""></button>
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"
-                        class="active" aria-current="true"></button>
-                </div>
+            <h1 class="text-center my-5">Testimonios</h1>
+            <div id="myCarousel" class="carousel slide carousel-dark mb-6 carousel-fade" data-bs-theme="dark"
+                data-bs-ride="carousel">
+
                 <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption text-start">
-                                <h1>Example headline.</h1>
-                                <p class="opacity-75">Some representative placeholder content for the first slide of the
-                                    carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
-                                <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="carousel-item active">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption text-end">
-                                <h1>One more for good measure.</h1>
-                                <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-                            </div>
-                        </div>
+                        <article class="container text-center">
+                            <img class="rounded-5" src="assets/frida.jpeg" height="200" alt="Frida Kahlo">
+                            <h3 class="my-3">Frida Kahlo</h3>
+                            <p>"Lau es altamente creativa que me inspira"</p>
+                        </article>
                     </div>
+
+                    <div class="carousel-item">
+                        <article class="container text-center">
+                            <img class="rounded-5" src="assets/ElonMusk.webp" height="200" alt="Elon Musk">
+                            <h3 class="my-3">Elon Musk</h3>
+                            <p>"Su codigo salvo una mision en marte"</p>
+                        </article>
+                    </div>
+
+                    <div class="carousel-item">
+                        <article class="container text-center">
+                            <img class="rounded-5" src="assets/alien.jpg" height="200" alt="Alien">
+                            <h3 class="my-3">Señor Marte</h3>
+                            <p>"Gracias a ella Elon no encontro nuestra base"</p>
+                        </article>
+                    </div>
+
+
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -257,34 +213,34 @@
                 </button>
             </div>
         </section>
+
     </main>
 
-    <footer>
-        <section id="contactos" class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <div class="col-md-4 d-flex align-items-center">
-                    <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-                        <svg class="bi" width="30" height="24">
-                            <use xlink:href="#bootstrap"></use>
-                        </svg>
-                    </a>
-                    <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
-                </div>
+    <footer id="contacto" class="bg-black py-3 mt-5" data-bs-theme="dark">
+        <p class="mt-5 text-white text-center texto-gigante">
+            <i class="bi bi-file-code-fill"></i>
+        </p>
+        <h4 class="text-white text-center mb-5">"Lo que sabes influencia tu destino"</h4>
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item fs-1 ">
+                <a href="https://github.com/Lauarrona" target="_blank" class="nav-link px-5 text-body-secondary">
+                    <i class="bi bi-github text-white"></i>
+                </a>
+            </li>
 
-                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#twitter"></use>
-                            </svg></a></li>
-                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#instagram"></use>
-                            </svg></a></li>
-                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#facebook"></use>
-                            </svg></a></li>
-                </ul>
-            </footer>
-        </section>
+            <li class="nav-item fs-1 ">
+                <a href="https://www.instagram.com/lauarrona?igsh=MWFjbHdjcTdxN3R2aA%3D%3D&utm_source=qr" target="_blank" class="nav-link px-5 text-body-secondary">
+                    <i class="bi bi-instagram text-white"></i>
+                </a>
+            </li>
 
+            <li class="nav-item fs-1">
+                <a href="https://www.tiktok.com/@lauarrona?_t=8oVAQRkeH8I&_r=1" target="_blank" class="nav-link px-5 text-body-secondary">
+                    <i class="bi bi-tiktok text-white"></i>
+                </a>
+            </li>
+        </ul>
+        <p class="text-center text-white">© 2024 Lau Arrona | TECHNOLOCHICAS PRO</p>
     </footer>
 
 </body>
