--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header>
         <section id="presentacion" class="px-4 pt-5 my-5 text-center border-bottom">
             <div>
-                <h1 class="display-4 fw-bold" id="presentacion">¡Bienvenidos!
+                <h1 class="display-4 fw-bold" id="app">¡Bienvenidos!
                     Soy Laura Arrona</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="lead mb-4"> Estudiante de Ingeniería Biomédica en la Universidad de Guanajuato. Apasionada
@@ -229,19 +229,31 @@
             </li>
 
             <li class="nav-item fs-1 ">
-                <a href="https://www.instagram.com/lauarrona?igsh=MWFjbHdjcTdxN3R2aA%3D%3D&utm_source=qr" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.instagram.com/lauarrona?igsh=MWFjbHdjcTdxN3R2aA%3D%3D&utm_source=qr"
+                    target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-instagram text-white"></i>
                 </a>
             </li>
 
             <li class="nav-item fs-1">
-                <a href="https://www.tiktok.com/@lauarrona?_t=8oVAQRkeH8I&_r=1" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.tiktok.com/@lauarrona?_t=8oVAQRkeH8I&_r=1" target="_blank"
+                    class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-tiktok text-white"></i>
                 </a>
             </li>
         </ul>
         <p class="text-center text-white">© 2024 Lau Arrona | TECHNOLOCHICAS PRO</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+        <!-- el scrip siempre va abajo de todo pero arriba del body -->
+    <script src="scirpt.js">
+    </script>
 
 </body>
 
